# test_pcl

./: 2015-10-29-12-53-39_kinfu_output_1.pcd  CMakeLists.txt  cluster_extraction.cpp  color.cpp  color_filter.cpp  convert_pcd_ascii_binary.cpp  find_stick.cpp  functions.txt  icp.cpp  min_cut_segmentation.cpp  pca.cpp  pcd_visual_xyz.cpp  pcd_visualization.cpp  readme.md  statistical_removal.cpp  statistical_removal_ori.cpp  visual_pca.cpp  voxel_grid.cpp
color/: bag1_1_red.pcd  bag1_2_red.pcd  bag1_3_red.pcd  bag2_1_red.pcd  bag2_2_red.pcd  bag2_3_red.pcd  bag2_4_red.pcd  bag2_5_red.pcd  bag3_1_red.pcd  bag3_2_red.pcd  bag3_3_red.pcd  bag3_4_red.pcd  bag3_5_red.pcd  bag3_6_red.pcd  bag4_1_red.pcd  bag4_2_red.pcd  bag4_3_red.pcd  bag4_4_red.pcd  bag4_5_red.pcd  bag5_10_red.pcd  bag5_11_red.pcd  bag5_12_red.pcd  bag5_13_red.pcd  bag5_1_red.pcd  bag5_2_red.pcd  bag5_3_red.pcd  bag5_4_red.pcd  bag5_5_red.pcd  bag5_6_red.pcd  bag5_7_red.pcd  bag5_8_red.pcd  bag5_9_red.pcd
downsampled/: bag1_1_vg.pcd  bag1_2_vg.pcd  bag1_3_vg.pcd  bag2_1_vg.pcd  bag2_2_vg.pcd  bag2_3_vg.pcd  bag2_4_vg.pcd  bag2_5_vg.pcd  bag3_1_vg.pcd  bag3_2_vg.pcd  bag3_3_vg.pcd  bag3_4_vg.pcd  bag3_5_vg.pcd  bag3_6_vg.pcd  bag4_1_vg.pcd  bag4_2_vg.pcd  bag4_3_vg.pcd  bag4_4_vg.pcd  bag4_5_vg.pcd  bag5_10_vg.pcd  bag5_11_vg.pcd  bag5_12_vg.pcd  bag5_13_vg.pcd  bag5_1_vg.pcd  bag5_2_vg.pcd  bag5_3_vg.pcd  bag5_4_vg.pcd  bag5_5_vg.pcd  bag5_6_vg.pcd  bag5_7_vg.pcd  bag5_8_vg.pcd  bag5_9_vg.pcd
removal/: bag1_1_removal.pcd  bag1_2_removal.pcd  bag1_3_removal.pcd  bag2_1_removal.pcd  bag2_2_removal.pcd  bag2_3_removal.pcd  bag2_4_removal.pcd  bag2_5_removal.pcd  bag3_1_removal.pcd  bag3_2_removal.pcd  bag3_3_removal.pcd  bag3_4_removal.pcd  bag3_5_removal.pcd  bag3_6_removal.pcd  bag4_1_removal.pcd  bag4_2_removal.pcd
